--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-jwt": "^8.5.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10"
   },
   "name": "pack_and_go_server",
